added navigation bar and ion icons

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ionic/react": "^5.9.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "ionicons": "^6.0.4",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
