--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "flachwitz_next",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
